ポップアップ画面の設定

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,47 +41,28 @@
 		<main>
             <div class="portfolio-frame container">
                 <div class="row">
-                    <div id="portfolio-button" class="portfolio-content  col-md-4">
+                    <div class="portfolio-content  col-md-4">
                         <button class="portfolio-content-list">
-                            <ul>
-                                <li class="portfolio-img">
-                                    <img src="icon/iphone.png">
-                                </li>
-                                <li>
-                                    <div class="portfolio-title">
-                                        テストテスト
-                                    </div>
-                                    <div class="portfolio-text">
-                                        テストテスト
-                                    </div>
-                                </li>
-                            </ul>
+                            <img src="image/portfolio.png" class="portfolio-content-bg">
+                            <div class="portfolio-content-title">
+                                    ポートフォリオ
+                            </div>
                         </button>
                     </div>
                     <div class="portfolio-content  col-md-4">
                         <button class="portfolio-content-list">
-                            <ul>
-                                <li class="portfolio-img">
-                                    <img src="icon/iphone.png">
-                                </li>
-                                <li>
-                                    <div class="portfolio-title">
-                                        テストテスト
-                                    </div>
-                                    <div class="portfolio-text">
-                                        テストテスト
-                                    </div>
-                                </li>
-                            </ul>
+                            <img src="image/borderless-p.png" class="portfolio-content-bg">
+                            <div class="portfolio-content-title">
+                                    企業HP
+                            </div>
                         </button>
                     </div>
                     <div class="portfolio-content  col-md-4">
                         <button class="portfolio-content-list">
+                            <img src="image/tanks.png" class="portfolio-content-bg"> 
                             <div class="portfolio-content-title">
                                     戦車バトル
-                                </div>
-                            <img src="image/tanks.png" class="portfolio-content-bg">
-                                
+                            </div>   
                         </button>
                     </div>
                     <div class="portfolio-content  col-md-4">
@@ -103,10 +84,31 @@
             </div>
             <!-- 通常非表示の画面-->
             <div class="modal-overlay"></div>
-            <div class="portfolio-detail">
+            <div class="portfolio-detail row">
                 <button class="close-button">
                     <img src="icon/close-icon.png">
                 </button>
+                <div class="portfolio-detail-content col-md-5">
+                    <div class="portfolio-detail-explain-top">
+                        概要
+                    </div>
+                    <div class="portfolio-detail-explain">
+                        ご覧いただいているKoooZiiiのポートフォリオです。<br>
+                        自分の力試しの意味も込めてwordpress等のCMSは<br>
+                        使用せず、フルスクラッチで作りました。見やすく、<br>
+                        分かりやすいページになるよう意識し作成しました。<br>
+                        メンテナンスを適時行いより良いものに仕上げます。
+                    </div>
+                    <div class="portfolio-detail-usedskill-top">
+                        使用言語・ツール
+                    </div>
+                    <div class="portfolio-detail-usedskill">
+                        HTML/CSS/bootstrap/JavaScript/PHP/GCP<br>
+                    </div>
+                </div>
+                <div class="portfolio-detail-image col-md-7">
+                   
+                </div>
             </div>
 		</main>
 		<footer>
